--- a/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
@@ -56,12 +56,12 @@ The audio samples are available at http://cpdu.github.io/vallt.
 
 Text-to-speech (TTS) synthesis is a monotonic sequence-to-sequence task, maintaining a strict order between the input phoneme sequence and the output speech sequence.
 Moreover, the output speech sequence is at frame-level and one phoneme may correspond to multiple frames of speech, so the output sequence is significantly longer than its corresponding input phoneme sequence.
-Typical non-autoregressive neural text-to-speech models, such as FastSpeech 2 \cite{fastspeech2}, GradTTS \cite{gradtts}, UniCATS \cite{unicats} and NaturalSpeech 2 \cite{naturalspeech2}, integrate an explicit duration prediction module.
+Typical non-autoregressive neural text-to-speech models, such as **FastSpeech2**[^01], **GradTTS**[^02], **UniCATS**[^03] and **NaturalSpeech2**[^04], integrate an explicit duration prediction module.
 Prior to training, the target duration is conventionally derived using the Viterbi forced alignment algorithm.
 
-Over the past two years, utilizing discrete speech tokens for speech generation is proposed in GSLM \cite{textlessnlp} and VQTTS \cite{vqtts}, paving the way for integrating cutting-edge language modeling techniques into TTS systems.
-Inspired by exceptional strides in natural language processing driven by decoder-only large Transformer models like GPT 3 \cite{gpt3} and the LLAMA 2 \cite{llama2}, Tortoise-TTS \cite{tortoise}, SPEAR-TTS \cite{speartts} and VALL-E \cite{valle} adopted the decoder-only architecture for TTS, achieving remarkable naturalness.
-SPEAR-TTS and VALL-E also have the ability to perform zero-shot speaker adaptation through in-context learning and auto-regressive (AR) continuation from a given speech prompt.
+Over the past two years, utilizing discrete speech tokens for speech generation is proposed in **GSLM**[^05] and **VQTTS**[^06], paving the way for integrating cutting-edge language modeling techniques into TTS systems.
+Inspired by exceptional strides in natural language processing driven by decoder-only large Transformer models like **GPT-3**[^07] and the **LLAMA2**[^08], **Tortoise-TTS**[^09], **SPEAR-TTS**[^10] and **VALL-E**[^11] adopted the decoder-only architecture for TTS, achieving remarkable naturalness.
+**SPEAR-TTS** and **VALL-E** also have the ability to perform zero-shot speaker adaptation through in-context learning and auto-regressive (AR) continuation from a given speech prompt.
 Furthermore, these decoder-only TTS models, unlike the previous non-autoregressive neural TTS models, circumvent explicit duration modeling and the requirement for phoneme durations obtained before hand.
 This characteristic offers convenience and simplifies training process, especially when training on large scale datasets.
 However, the implicit duration modeling within these systems lacks the monotonic alignment constraints, often leading to hallucination issues like mispronunciation, word skipping and repeating.
@@ -69,8 +69,8 @@ However, the implicit duration modeling within these systems lacks the monotonic
 In this work, we introduce ***VALL-T***, a decoder-only generative Transducer model that combines the best of both worlds.
 It eliminates the need for obtaining phoneme duration before hand while still maintains the monotonic alignment constraint.
 
-Transducer \cite{transducer}, also known as RNN-T, is an existing training scheme designed specifically for monotonic sequence-to-sequence task.
-Typical Transducer model adopts a modularized architecture, composed of an encoder, a prediction network and a joint network, and has demonstrated success in automatic speech recognition (ASR) \cite{transducer_asr} as a classification task.
+**Transducer**[^12], also known as RNN-T, is an existing training scheme designed specifically for monotonic sequence-to-sequence task.
+Typical Transducer model adopts a modularized architecture, composed of an encoder, a prediction network and a joint network, and has demonstrated success in automatic speech recognition (ASR) [^13] as a classification task.
 
 During inference, ***VALL-T*** allows us to explicitly guide the monotonic generation process by shifting the relative positions from left to right and dramatically alleviate the hallucination issue in decoder-only TTS.
 
@@ -89,7 +89,7 @@ To the best of our knowledge, this is the first work that implements Transducer 
 
 <table><tr><td width="50%">
 
-The Transducer model \cite{transducer}, also known as RNN-T, is designed for monotonic sequence-to-sequence tasks and comprises three components: an encoder, a prediction network, and a joint network.
+The **Transducer** model [^12], also known as **RNN-T**, is designed for monotonic sequence-to-sequence tasks and comprises three components: an encoder, a prediction network, and a joint network.
 Here, the prediction network is an auto-regressive network, such as RNN and LSTM.
 Transducer model also introduces a special output token called blank, denoted as $\varnothing$, which signifies the alignment boundary between output and input sequence.
 We define $\mathcal{Y}$ as the vocabulary of output tokens and $\bar{\mathcal{Y}}=\mathcal{Y}\cup \{\varnothing\}$ as the extended vocabulary.
@@ -110,7 +110,7 @@ In the inference phase, the prediction network auto-regressively predicts the ne
 
 <table><tr><td width="50%">
 
-Modularized Transducer model has demonstrated significant success in ASR \cite{transducer_asr}.
+Modularized Transducer model has demonstrated significant success in ASR [^13].
 Nevertheless, its suitability for generation tasks is limited.
 Typically, the joint network is a small network, comprising only one or a few linear projection layers, and the prediction network is LSTM or Transformer.
 This architecture introduces a limitation wherein the input condition is not incorporated into the generation process until it reaches the joint network.
@@ -129,11 +129,11 @@ We discuss the training and inference details below.
 ### Training
 
 We use a decoder-only architecture for ***VALL-T***.
-Similar to the approach in the previous work VALL-E, we concatenate the input phoneme and output speech tokens along the time axis and present them to the model as a unified sequence.
+Similar to the approach in the previous work **VALL-E**, we concatenate the input phoneme and output speech tokens along the time axis and present them to the model as a unified sequence.
 Unlike traditional RNN and LSTM architectures, the Transformer lacks a specific time order for input tokens, relying instead on position embeddings to indicate their positions.
-The position indices for the input sequence range from $0$ to $T-1$ and are converted into position embeddings through a sinusoidal function \cite{transformer}.
+The position indices for the input sequence range from $0$ to $T-1$ and are converted into position embeddings through a sinusoidal function [^14].
 Similarly, the output sequence adopts position indices from $0$ to $U$, including an additional \texttt{<sos>} token at the beginning.
-Following VALL-E, we utilize a triangular attention mask for the output sequence, facilitating auto-regressive generation.
+Following **VALL-E**, we utilize a triangular attention mask for the output sequence, facilitating auto-regressive generation.
 This mask ensures that each speech token attends to only previously generated tokens, maintaining a proper sequential order in the output.
 
 Beyond the typical absolute position indices starting from 0, we introduce additional relative position indices in ***VALL-T*** for input tokens.
@@ -168,7 +168,7 @@ We iteratively conduct the above process until the appearance of $\varnothing$ f
 Since the model is encouraged to generate speech tokens for the phoneme assigned relative position $0$ by Transducer loss during training, the step-by-step shifting operation during decoding facilitates the monotonic generation process and consequently enhance the robustness against hallucination.
 
 Next, we consider the integration of the speech prompt for zero-shot speaker adaptation.
-Following the approach used in VALL-E, the phoneme transcript of the speech prompt is placed at the start of the input sequence, while the speech prompt itself is positioned at the beginning of the output sequence.
+Following the approach used in **VALL-E**, the phoneme transcript of the speech prompt is placed at the start of the input sequence, while the speech prompt itself is positioned at the beginning of the output sequence.
 The two sequences are followed by the input phonemes to be generated and their corresponding output speech tokens respectively.
 Given that the speech prompt are provided, we assign the relative position 0 to the first phoneme right after the prompt transcript, as shown in Figure \ref{fig:vallt}, and perform speech continuation.
 Likewise, the relative positions undergo a shift each time $\varnothing$ emerges, repeating until the generation for the final phoneme is completed.
@@ -182,18 +182,18 @@ Likewise, the relative positions undergo a shift each time $\varnothing$ emerges
 <table><tr><td width="50%">
 
 ***VALL-T*** is compatible with any speech tokenizers.
-In our experiments, we use the Encodec \cite{encodec} speech tokenizer, following VALL-E, to ensure a fair comparison between our model and VALL-E and eliminate other factors that could potentially affect our analysis.
+In our experiments, we use the **EnCodec**[^15] speech tokenizer, following **VALL-E**, to ensure a fair comparison between our model and **VALL-E** and eliminate other factors that could potentially affect our analysis.
 The speech tokens are extracted in 50Hz and the sampling rate of output waveforms is 16k.
 It comprises 8 residual vector quantization (RVQ) indices for each frame.
-We also follow the approach introduced in VALL-E that predicts the sequence of the first RVQ index with the auto-regressive models and then predicts the remaining 7 RVQ indices conditioned on the first RVQ index with a separate non-auto-regressive (NAR) model.
-Both the input and output sequences are encoded with BPE \cite{bpe} algorithm to shorten sequence lengths and diminish GPU memory consumption.
-***VALL-T*** adopts an identical architecture to VALL-E, containing 12 layers of Transformer blocks.
+We also follow the approach introduced in **VALL-E** that predicts the sequence of the first RVQ index with the auto-regressive models and then predicts the remaining 7 RVQ indices conditioned on the first RVQ index with a separate non-auto-regressive (NAR) model.
+Both the input and output sequences are encoded with **BPE**[^16] algorithm to shorten sequence lengths and diminish GPU memory consumption.
+***VALL-T*** adopts an identical architecture to **VALL-E**, containing 12 layers of Transformer blocks.
 Each block comprises 12 attention heads and has a hidden dimension of 1024.
 
-We use LibriTTS \cite{libritts} dataset in our experiments, which is a multi-speaker transcribed English speech dataset.
+We use **LibriTTS**[^17] dataset in our experiments, which is a multi-speaker transcribed English speech dataset.
 Its training set consists of approximately 580 hours of speech data from 2,306 speakers.
-We train our model for 40 epochs using a ScaledAdam \cite{zipformer} optimizer.
-The learning rate scheduler is Eden \cite{zipformer} with a base learning rate of $0.05$, an epoch scheduling factor of 4 and a step scheduling factor of 5000.
+We train our model for 40 epochs using a **ScaledAdam**[^18] optimizer.
+The learning rate scheduler is **Eden**[^18] with a base learning rate of $0.05$, an epoch scheduling factor of 4 and a step scheduling factor of 5000.
 We use 8 A800 GPUs for the training.
 
 </td><td>
@@ -209,7 +209,7 @@ We use 8 A800 GPUs for the training.
 We first do alignment analysis to check if relative position embedding in ***VALL-T*** indicates the alignment as expected.
 Given the speech $\bm{y}$ and its transcript $\bm{x}$, we iterate over all relative positions and calculate the alignment grid $\bm{p}$ of output distributions in the shape of $T\times (U+1)$.
 Then we calculate the forward variables, backward variables and posterior probabilities accordingly.
-The definitions of forward variable, backward variables, and posterior probabilities have been introduced in \cite{transducer}.
+The definitions of forward variable, backward variables, and posterior probabilities have been introduced in **Transducer**[^12].
 
 In Figure \ref{fig:alignment}, we illustrate an example of the forward variable, backward variable, and posterior probability for ***VALL-T***, with darker colors indicating lower values.
 The values are plotted on a logarithmic scale.
@@ -230,7 +230,7 @@ Since ground-truth labels for alignment are unavailable, our alignment analysis 
 
 In this section, we conduct an evaluation of our models on zero-shot TTS task.
 The task refers to synthesizing speech in the voices of unseen speakers given speech prompts and their corresponding transcripts.
-Our test set uses a same test set as in \cite{unicats}, containing 500 utterances and involving 37 speakers from the LibriTTS test set.
+Our test set uses a same test set as in **UniCATS**[^03], containing 500 utterances and involving 37 speakers from the LibriTTS test set.
 Each speaker is assigned a specific speech prompt.
 Before assessing the performance of our models, we conduct speech resynthesis using our Encodec to evaluate the speech tokenizer.
 We also do an experiment named ``NAR resynthesis''.
@@ -239,16 +239,16 @@ Then, we convert all the 8 RVQ indices to waveform using the Encodec decoder.
 The purpose of the NAR resynthesis experiment is to demonstrate the performance degradation introduced by the NAR model, so we can better analyze the results of the entire pipelines, where the AR models are the primary focus of our paper.
 
 The baselines of this experiment include two models.
-One is the popular decoder-only TTS model VALL-E and another is the recently proposed TTS model with a modularized Transducer achitecture called ``Transduce and Speak'' \cite{transduceandspeak}.
+One is the popular decoder-only TTS model **VALL-E** and another is the recently proposed TTS model with a modularized Transducer architecture called "Transduce and Speak" [^19].
 The main evaluation metric in this paper is the word error rate (WER).
-In our evaluation process, we first synthesize speech for the test set, and then perform speech recognition using a well-known ASR model, Whisper\footnote{https://huggingface.co/openai/whisper-medium} \cite{whisper}.
+In our evaluation process, we first synthesize speech for the test set, and then perform speech recognition using a well-known ASR model, **Whisper**[^20] [URL](https://huggingface.co/openai/whisper-medium).
 The transcripts obtained from the ASR model are then compared to the ground-truth input text to calculate the word error rate.
 
-Table \ref{tab:tts} shows that ***VALL-T*** attains significant lower WER than baselines, which is a 28.3\% relative reduction when compared to VALL-E and is only 0.41 higher than NAR resynthesis, suggesting the robustness of ***VALL-T***.
+Table \ref{tab:tts} shows that ***VALL-T*** attains significant lower WER than baselines, which is a 28.3\% relative reduction when compared to **VALL-E** and is only 0.41 higher than NAR resynthesis, suggesting the robustness of ***VALL-T***.
 
 Additionally, we present the mel-cepstral distortion (MCD), Speaker Embedding Cosine Similarity (SECS) and Mean Opinion Score (MOS) for naturalness and speaker similarity.
 Note that the SECS here is evaluated between the generated speech and the provided speech prompt, not the corresponding ground-truth speech, since our goal is to emulate solely the voice of the given prompt.
-It is obtained using a pretrained speaker verification model\footnote{https://github.com/resemble-ai/Resemblyzer}.
+It is obtained using a [pretrained speaker verification model [URL]](https://github.com/resemble-ai/Resemblyzer).
 In MOS tests, 15 listeners were tasked with rating each utterance on a scale from 1 to 5, with higher scores indicating better naturalness and similarity.
 We can observe that ***VALL-T*** performs comparably to or even better than the baselines on most of these metrics when WER dramatically decreases.
 
@@ -266,3 +266,26 @@ Threfore, this model eliminates the need for acquiring phoneme durations before 
 </td><td>
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^01]: [FastSpeech2](../../Acoustic/2020.06.08_FastSpeech2.md)
+[^02]: [Grad-TTS](../../Acoustic/2021.05.13_Grad-TTS.md)
+[^03]: [UniCATS](../../Diffusion/2023.06.13_UniCATS.md)
+[^04]: [NaturalSpeech2](../../Diffusion/2023.04.18_NaturalSpeech2.md)
+[^05]: [GSLM](../S2S/2021.02.01_GSLM.md)
+[^06]: [VQTTS](../../E2E/2022.04.02_VQTTS.md)
+[^07]: [GPT-3](../../TextLM/2020.05.28_GPT-3.md)
+[^08]: [LLaMA2](../../TextLM/2023.07.18_LLaMA2.md)
+[^09]: [TorToise-TTS](../../Diffusion/2023.05.12_TorToise-TTS.md)
+[^10]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
+[^11]: [VALL-E](2023.01.05_VALL-E.md)
+[^12]: [Transducer/RNN-T](../../ASR/2012.11.14_RNN-T.md)
+[^13]: Streaming End-To-End Speech Recognition for Mobile Devices.
+[^14]: [Transformer](../../_Transformer/2017.06.12_Transformer.md)
+[^15]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
+[^16]: [BPE](../../_Basis/2015.08.31_BPE.md)
+[^17]: [LibriTTS](../../../Datasets/2019.04.05_LibriTTS.md)
+[^18]: [ScaleAdam/Eden/Zipformer](../../../Modules/Optimization/2023.10.17_ScaledAdam.md)
+[^19]: Transduce and Speak: Neural Transducer for Text-To-Speech with Semantic Token Prediction.
+[^20]: [Whisper](../../ASR/2022.12.06_Whisper.md)
