--- a/Models/SpeechLM/ST2S/2024.07.11_MELLE.md
+++ b/Models/SpeechLM/ST2S/2024.07.11_MELLE.md
@@ -136,7 +136,7 @@ VALL-E employs two-stage modeling method, with an autoregressive model for gener
 In parallel to our work, **VALL-E 2 (2024)** shares the same architecture as VALL-E but employs a repetition-aware sampling strategy that promotes more deliberate sampling choices.
 
 Other studies have investigated fully non-autoregressive approaches to increase the speed of model inference.
-For instance, [SoundStorm](../2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
+For instance, [SoundStorm](2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
 [StyleTTS2](../2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../../Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
 [Voicebox](../2023.06.23_VoiceBox.md) and [Audiobox](../2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
 Recently, [E2 TTS](../../Diffusion/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
