--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -269,6 +269,65 @@ We select the guidance scale $\alpha_{spk}$ and $\alpha_{txt}$ based on experime
 
 <table><tr><td width="50%">
 
+In this subsection, we describe the datasets, training, inference, and evaluation metrics.
+We provide the model configuration and detailed hyper-parameter setting in Appendix~\ref{app:model_config}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Datasets**
+
+We train MegaTTS 3 on the LibriLight~\citep{kahn2020libri} dataset, which contains 60k hours of unlabeled speech derived from LibriVox audiobooks.
+All speech data are sampled at 16KHz.
+We transcribe the speeches using an internal ASR system and extract the predefined speech-text alignment using the external alignment tool~\citep{mcauliffe2017montreal}.
+We utilize three benchmark datasets:
+(1) the librispeech~\citep{panayotov2015librispeech} test-clean set following NaturalSpeech 3~\citep{ju2024naturalspeech} for zero-shot TTS evaluation;
+(2) the LibriSpeech-PC test-clean set following F5-TTS~\citep{chen2024f5} for zero-shot TTS evaluation;
+(3) the L2-arctic dataset~\citep{zhao2018l2arctic} following~\citep{melechovsky2022accented,liu2024controllable} for accented TTS evaluation.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Training and Inference**
+
+We train the WaveVAE model and MegaTTS 3 on 8 NVIDIA A100 GPUs.
+The batch sizes, optimizer settings, and learning rate schedules are described in Appendix~\ref{app:model_config}.
+It takes 2M steps for the WaveVAE model's training and 1M steps for MegaTTS 3's training until convergence.
+The pre-training of MegaTTS 3 requires 800k steps and PeRFlow distillation requires 200k steps.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Objective Metrics**
+
+(1) For zero-shot TTS, we evaluate speech intelligibility using the word error rate (WER) and speaker similarity using SIM-O~\citep{ju2024naturalspeech}.
+To measure SIM-O, we utilize the WavLM-TDCNN speaker embedding model\footnote{\url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}} to calculate the cosine similarity score between the generated samples and the prompt.
+As SIM-R~\citep{le2023Voicebox} is not comparable across baselines using different acoustic tokenizers, we recommend focusing on SIM-O in our experiments.
+The similarity score is in the range of $\left[-1,1\right]$, where a higher value indicates greater similarity.
+In terms of WER, we use the publicly available HuBERT-Large model~\citep{hsu2021hubert}, fine-tuned on the 960-hour LibriSpeech training set, to transcribe the generated speech.
+The WER is calculated by comparing the transcribed text to the original target text.
+All samples from the test set are used for the objective evaluation;
+(2) For accented TTS, we evaluate the Mel Cepstral Distortion (MCD) in dB level and the moments (standard deviation ($\sigma$), skewness ($\gamma$) and kurtosis ($\kappa$))~\citep{andreeva2014differences,niebuhr2019measuring} of the pitch distribution to evaluate whether the model accurately captures accent variance.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Subjective Metrics**
+
+We conduct the MOS (mean opinion score) evaluation on the test set to measure the audio naturalness via Amazon Mechanical Turk.
+We keep the text content and prompt speech consistent among different models to exclude other interference factors.
+We randomly choose 40 samples from the test set of each dataset for the subjective evaluation, and each audio is listened to by at least 10 testers.
+We analyze the MOS in three aspects: CMOS (quality, clarity, naturalness, and high-frequency details), SMOS (speaker similarity in terms of timbre reconstruction and prosodic pattern), and ASMOS (accent similarity).
+We tell the testers to focus on one corresponding aspect and ignore the other aspect when scoring.
+
 </td><td>
 
 </td></tr></table>
