--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -344,6 +344,13 @@ We tell the testers to focus on one corresponding aspect and ignore the other as
 
 <table><tr><td width="50%">
 
+In this paper, we introduce MegaTTS 3, a zero-shot TTS framework that leverages novel sparse alignment boundaries to ease the difficulty of alignment learning while retaining the naturalness of the generated speeches.
+This strategy allows MegaTTS 3 to combine the strengths of methods with both implicit alignments and predefined hard alignments.
+Additionally, we employ the PeRFlow technique to further accelerate the generation process and design a multi-condition CFG strategy to offer more flexible control over accents.
+Experimental results show that MegaTTS 3 achieves state-of-the-art zero-shot TTS speech quality while maintaining a more efficient pipeline.
+Moreover, the sparse alignment strategy also shows enhanced prosodic naturalness and higher robustness against a suboptimal duration predictor.
+Due to space constraints, further discussions are provided in the appendix.
+
 </td><td>
 
 </td></tr></table>
