--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -334,7 +334,101 @@ We tell the testers to focus on one corresponding aspect and ignore the other as
 
 ## 5·Results: 结果
 
+### Results of Zero-Shot Speech Synthesis
+
 <table><tr><td width="50%">
+
+**Evaluation Baselines**
+
+We compare the zero-shot speech synthesis performance of MegaTTS 3 with 11 strong baselines, including: 1) VALL-E 2~\citep{chen2024vall}; 2) VoiceBox~\citep{le2023Voicebox}; 3) DiTTo-TTS~\citep{lee2024ditto}; 4) NaturalSpeech 3~\citep{ju2024naturalspeech}; 5) CosyVoice~\citep{du2024cosyvoice}; 6) MaskGCT~\citep{wang2024maskgct}; 7) F5-TTS~\citep{chen2024f5}; 8) E2 TTS~\citep{eskimez2024e2}.
+Explanation and details of the selected baseline systems are provided in Appendix~\ref{app:detail_zs_tts_baseline}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Analysis**
+
+As shown in Table~\ref{table:en_zs_tts}, we can see that 1) MegaTTS 3 achieves state-of-the-art SIM-O, SMOS, and WER scores, comparable to NaturalSpeech 3 (the counterpart with forced alignment), and significantly surpasses other baselines without explicit alignments.
+The improved SIM-O and SMOS suggest that the proposed sparse alignment effectively simplifies the text-to-speech mapping challenge like predefined forced duration information, allowing the model to focus more on learning timbre information.
+And the improved WER indicates that MegaTTS 3 also enjoys strong robustness; 2) MegaTTS 3 significantly surpasses all baselines in terms of CMOS, demonstrating the effectiveness of the proposed sparse alignment strategy; 3) After the PeRFlow acceleration, the student model of MegaTTS 3 shows on par quality with the teacher model and enjoys fast inference speed.
+We also conduct the experiments on the LibriSpeech-PC test-clean set provided by F5-TTS and the results are shown in Table~\ref{table:en_zs_tts_valle}, which also demonstrates that our method achieves state-of-the-art performance in terms of speaker similarity and speech intelligibility.
+The duration controllability of MegaTTS 3 is verified in Appendix~\ref{app:dur_contol}.
+In the demo page, we also demonstrate that our method can maintain high naturalness even when the performance of the duration predictor is suboptimal (while MegaTTS 3 with forced alignment fails).
+
+</td><td>
+
+</td></tr></table>
+
+### Experiments of Prosodic Naturalness
+
+<table><tr><td width="50%">
+
+We also measure the objective metrics MCD, SSIM, STOI, GPE, VDE, and FFE following InstructTTS~\citep{yang2024instructtts} to evaluate the prosodic naturalness of our method.
+The results are presented in Table~\ref{table:expressiveness_exp_40}.
+Specifically, our method with sparse alignment (Ours w/ S.A.) achieves the best performance across all metrics, with an MCD of 4.42, GPE of 0.31, VDE of 0.29, and FFE of 0.34.
+These results indicate a significant improvement in prosodic naturalness compared to the baseline NaturalSpeech 3 and our method with forced alignment (Ours w/ F.A.), further validating the effectiveness of our sparse alignment strategy.
+Our method provides a noval and effective solution for speech synthesis applications that require high robustness and exceptional expressiveness, such as audiobook narration and virtual assistants.
+
+</td><td>
+
+</td></tr></table>
+
+### Results of Accented TTS
+
+<table><tr><td width="50%">
+
+In this subsection, we evaluate the accented TTS performance of our model on the L2-ARCTIC dataset~\citep{zhao2018l2arctic}.
+This corpus includes recordings from non-native speakers of English whose first languages are Hindi, Korean, etc.
+In this experiment, we focus on verifying whether our model and baseline can synthesize natural speech with different accent types (standard English or English with specific accents) while maintaining consistent vocal timbre.
+We compare our MegaTTS 3 model with CTA-TTS~\citep{liu2024controllable}.
+More details of the baseline model are provided in Appendix~\ref{app:detail_accented_tts_experiment}.
+1) First, we evaluate whether the models can synthesize high-quality speeches with accents.
+As shown in Table~\ref{table:accent-tts-result}, our MegaTTS 3 model significantly outperforms the CTA-TTS baseline in terms of the subjective accent similarity MOS core, the MCD (dB) values, and the statistical moments ($\sigma$, $\gamma$, and $\kappa$) of pitch distributions.
+These results demonstrate the superior accent learning capability of MegaTTS 3 compared to the baseline system.
+Besides, the MegaTTS 3 model achieves higher CMOS and SMOS scores compared to CTA-TTS, indicating a significant improvement in speech quality and speaker similarity; 2) Secondly, we evaluate whether the models can accurately control the accent types of the generated speeches.
+We follow CTA-TTS to conduct the intensity classification experiment~\citep{liu2024controllable}.
+At
+run-time, we generate speeches with two accent types, and the listeners are instructed to classify the perceived accent categories, including ``standard'' and ``accented''.
+Figure~\ref{exp:accent_confusion_matrices} shows that our MegaTTS 3 significantly surpasses CTA-TTS in terms of accent controllability.
+
+</td><td>
+
+</td></tr></table>
+
+### Evaluation of WaveVAE
+
+<table><tr><td width="50%">
+
+First, we evaluate the reconstruction quality of the WaveVAE model, with results presented in Table~\ref{app:table_recon_speech_compression}.
+We report the objective metrics, including Perceptual Evaluation of Speech Quality (PESQ), Virtual Speech Quality Objective Listener (ViSQOL), and Mel-Cepstral Distortion (MCD).
+We select the following codec models as baselines: 1) EnCodec~\citep{defossez2022high}, a representative and pioneering work in the field of speech codec; 2) DAC~\citep{kumar2024high}, a high-bitrate audio codec model with high reconstruction quality; 3) WavTokenizer~\citep{ji2024wavtokenizer}, a low-bitrate speech codec model that focuses more on perceptual reconstruction quality; 4) X-codec2~\citep{ye2025llasa}, a low-bitrate speech codec model, leveraging the representations of a pre-trained model to further enhance overall quality.
+The results demonstrates that, despite applying higher compression rate, our solution achieves superior performance on various reconstruction metrics, such as MCD and ViSQOL.
+
+Second, to demonstrate the impact of different speech compression models on the overall performance of the TTS system, we extracted the latents from Encodec and DAC, respectively, for training our MegaTTS 3 model.
+We report the experimental results in Table~\ref{app:table_zs_tts_different_codec}.
+It can be seen that our method outperforms ``w/ DAC'' and ``w/ Encodec'', due to the fact that the latent space of our speech compression model is more compact (only 25 tokens per second).
+The results demonstrate the importance of our WaveVAE, a high-compression, high-reconstruction-quality speech codec model, for TTS systems.
+This conclusion is also verified by a previous work~\citep{lee2024ditto}, which shows compact target latents facilitate learning in diffusion models.
+
+</td><td>
+
+</td></tr></table>
+
+### Ablation Studies
+
+<table><tr><td width="50%">
+
+We test the following four settings: 1) \textit{w/ FA}, which replaces the sparse alignment in MegaTTS 3 with forced alignment used in ~\citep{le2023Voicebox,shen2023naturalspeech}; 2) \textit{w/o A.}, we do not use the predefined alignments and modeling the duration information implicitly; 3) \textit{w/ CFG}, we use the standard CFG following the common practice in Diffusion-based TTS; 4) \textit{w/o CFG}, we do not use the CFG mechanism.
+All tests follow the experimental setup described in Section~\ref{exp_zero-shot}.
+The results are shown in Table~\ref{table:ablation_alignments_cfg}.
+For settings 1) and 2), it can be observed that both forced alignment and sparse alignment can enhance the performance of speech synthesis models.
+However, compared to forced alignment, sparse alignment does not constrain the model's search space, leading to a prosodic naturalness (see Section~\ref{exp:prosodic_naturalness}).
+Therefore, the sparse alignment strategy achieves $+0.17$ CMOS compared to the forced alignment strategy.
+For setting 3), compared with the standard CFG, our multi-condition CFG performs slightly better as it allows for flexible control over the weights between the text prompt and the speaker prompt.
+Setting 4) proves that the CFG mechanism is crucial for MegaTTS 3.
+Additionally, we visualize the attention score matrices from different transformer layers in MegaTTS 3 in Appendix~\ref{app:vis_diff_attn}, leading to some interesting observations.
 
 </td><td>
 
